# mmc-compiler

./: .gitignore  CMakeLists.txt  LICENSE  MILESTONE.md  README.md  bootstrap.sh  compile_mmc.py  ia_bridge.c  ia_bridge.h  mmc.h  mmc_build.sh  mmc_hardware_diag.mmc  mmc_make.sh  mmc_phase6_main.mmc  mmc_sequential_alarm.mmc  mmc_server.py  mmc_transpiler.py  mmclib.c  nyanlin_training_data_log.json  output.ll  test_ia.mmc
.github/workflows/: build-mmc-compiler.yml
docs/copilot-threads/: fri_apr_24_2026_gguf_parser_implementation_and_fixes.json
examples/: advanced.mmc  file_io.mmc  hello.mmc  if_else.mmc  math_example.mmc  oop_example.mmc  sample_ai.mmc
ggml_core/: z_ai_core.c
llvm-mmc/include/: mmc_codegen.h  mmc_lexer.h  mmc_types.h
nyanlin/: .gitignore  README.md  __init__.py  main.py
nyanlin/binary/: Makefile  README.md  build.sh  nyanlin.c
nyanlin/core/: __init__.py  gguf_parser.py  model_loader.py  tensor.py  tokenizer.py
nyanlin/inference/: __init__.py  generator.py  sampler.py
nyanlin/layers/: __init__.py  attention.py  feedforward.py
selfhosted/: bootstrap.sh  ia_audio.c  ia_bridge.c  ia_bridge.h  mmc_c_codegen.mmc  mmc_clock.c  mmc_codegen.mmc  mmc_lexer.mmc  mmc_parser.mmc  mmcd.sh  mmclib.h  riley_sync.sh
selfhosted/diag/: mmc_diag_combined.mmc  mmc_diag_main.mmc  mmc_diag_v5.mmc  mmc_repair_expert.mmc  mmc_repair_logic.mmc
src/: mmc.py  mmc_codegen_llvm.py  mmc_lexer.py  mmc_parser.py
src/bridges/: ia_bridge_http.c
tests/: test_fibonacci.mmc  test_hello.mmc  test_myanmar.mmc
tools/mcc/: mmc.cpp  mmc_simple.c
